@@ -767,6 +767,7 @@ following image formats are supported:
 @item ZLIB                   @tab  X  @tab  X @tab Part of LCL, encoder experimental
 @item TechSmith Camtasia     @tab     @tab  X @tab fourcc: TSCC
 @item IBM Ultimotion         @tab     @tab  X @tab fourcc: ULTI
+@item Miro VideoXL           @tab     @tab  X @tab fourcc: VIXL
 @end multitable
 
 @code{X} means that the encoding (resp. decoding) is supported.
