@@ -17,7 +17,7 @@ extern "C" {
 
 #define FFMPEG_VERSION_INT     0x000409
 #define FFMPEG_VERSION         "0.4.9-pre1"
-#define LIBAVCODEC_BUILD       4727
+#define LIBAVCODEC_BUILD       4728
 
 #define LIBAVCODEC_VERSION_INT FFMPEG_VERSION_INT
 #define LIBAVCODEC_VERSION     FFMPEG_VERSION
@@ -104,6 +104,7 @@ enum CodecID {
     CODEC_ID_TSCC,
     CODEC_ID_ULTI,
     CODEC_ID_QDRAW,
+    CODEC_ID_VIXL,
 
     /* various pcm "codecs" */
     CODEC_ID_PCM_S16LE,
@@ -1890,6 +1891,7 @@ extern AVCodec flac_decoder;
 extern AVCodec tscc_decoder;
 extern AVCodec ulti_decoder;
 extern AVCodec qdraw_decoder;
+extern AVCodec xl_decoder;
 
 /* pcm codecs */
 #define PCM_CODEC(id, name) \
